--- a/audit-4.html
+++ b/audit-4.html
@@ -554,94 +554,78 @@
                     </div>
                     <div class="col-12 col-lg-7 text-area pl-80">
                         <p class="fs-2-5 fw-600 my-3">
-                            Staying ahead of disruptive change
+                            Nizamnamə kapitalının auditinin məqsədləri, vəzifələri
                         </p>
                         <p class="fs-1-7  ls-2 lh-30">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat harum expedita, voluptate
-                            ullam nam est
-                            totam aut repudiandae maxime earum. Corporis asperiores laboriosam adipisci totam autem
-                            omnis beatae
-                            nostrum voluptatum?
+                            Nizamnamə kapitalının formalaşmasının yoxlanılmasında məqsəd müəssisənin nizamnamə
+                            kapitalının formalaşması baxımından onun təsis sənədlərinin mövcud qanunvericiliyə uyğunluğu
+                            barədə rəy formalaşdırmaqdır
                         </p>
-                        <p class="fs-2-5 fw-600 mt-5">
-                            Xarici ticarət
-                        </p>
-                        <p class="fs-1-7  ls-2 my-5 lh-30">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore
-                            corporis corrupti
-                            amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere
-                            enim vel
-                            provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia
-                            facere non beatae
-                            maiores consequuntur assumenda et saepe tempora, inventore dolores est obcaecati labore
-                            culpa maxime. Sit
-                            in labore sed doloribus ut velit atque cum tempora quas earum repellat quos fuga aut aperiam
-                            unde animi
-                            ab, aspernatur laudantium dolores sint. Quasi quidem optio et inventore dolor dolorem.
-                            Recusandae iste
-                            iure fugiat, fugit accusantium tempore excepturi alias quidem soluta, accusamus possimus
-                            voluptate vel
-                            impedit consequuntur hic harum velit adipisci officia vitae delectus obcaecati. Ducimus
-                            voluptatibus
-                            magnam voluptates, eveniet dolorum nemo vitae dolore est nulla eaque ad, impedit voluptate
-                            sunt. Error
-                            explicabo provident natus tempora sequi, cumque omnis totam nesciunt accusamus ipsa delectus
-                            nam
-                            cupiditate nobis dicta quia facilis? Explicabo, inventore animi?
-                        </p>
-                        <p class="fs-2-5 fw-600 mt-5">
-                            Xarici ticarət
-                        </p>
-                        <p class="fs-1-7  ls-2 my-5 lh-30">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore
-                            corporis corrupti
-                            amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere
-                            enim vel
-                            provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia
-                            facere non beatae
-                            maiores consequuntur assumenda et saepe tempora, inventore dolores est obcaecati labore
-                            culpa maxime. Sit
-                            in labore sed doloribus ut velit atque cum tempora quas earum repellat quos fuga aut aperiam
-                            unde animi
-                            ab, aspernatur laudantium dolores sint. Quasi quidem optio et inventore dolor dolorem.
-                            Recusandae iste
-                            iure fugiat, fugit accusantium tempore excepturi alias quidem soluta, accusamus possimus
-                            voluptate vel
-                            impedit consequuntur hic harum velit adipisci officia vitae delectus obcaecati. Ducimus
-                            voluptatibus
-                            magnam voluptates, eveniet dolorum nemo vitae dolore est nulla eaque ad, impedit voluptate
-                            sunt. Error
-                            explicabo provident natus tempora sequi, cumque omnis totam nesciunt accusamus ipsa delectus
-                            nam
-                            cupiditate nobis dicta quia facilis? Explicabo, inventore animi?
-                        </p>
+
+                        <ul class="ms-4 my-3">
+                            <p class="fw-600 ls-2 fs-2-5 my-5"> Nizamnamə kapitalının formalaşması üzrə təsis
+                                sənədlərinin, uçot və hesabat məlumatlarının
+                                yoxlanılması:</p>
+                            <li class="fs-1-9 fw-500 my-3">
+                                təsis sənədlərinin mövcudluğunun və formasının yoxlanılması
+                            </li>
+                            <li class="fs-1-9 fw-500 my-3">
+                                təsis sənədlərinin məzmununun qanunvericilik və normativ hüquqi aktların tələblərinə
+                                uyğunluğu
+                            </li>
+                            <li class="fs-1-9 fw-500 my-3">
+                                nizamnamə kapitalının ödənilməsi şərtlərinin tamlığının və uyğunluğunun yoxlanılması
+                            </li>
+                            <li class="fs-1-9 fw-500 my-3">
+                                təşkilatın nizamnamə kapitalına köçürülən vəsaitlərin təsisçiləri tərəfindən vergiyə
+                                cəlb edilməsinin yoxlanılması; ;
+                            </li>
+                            <li class="fs-1-9 fw-500 my-3">
+                                nizamnamə kapitalının məlumatlarının Azərbaycan Respublikasının qanunvericiliyinə
+                                uyğunluğu;
+                            </li>
+                            <li class="fs-1-9 fw-500 my-3">
+                                nizamnamə kapitalının formalaşmasının tamlığı və düzgünlüyü
+                            </li>
+                            <li class="fs-1-9 fw-500 my-3">
+                                nizamnamə kapitalının ödənilməsi üzrə yekun hesablaşmaların qanunla müəyyən edilmiş
+                                müddətlərinə riayət edilməsi;
+                            </li>
+                            <li class="fs-1-9 fw-500 my-3">
+                                nizamnamə kapitalının formalaşmasının uçotda əks olunmasının düzgünlüyünün
+                                qiymətləndirilməsi
+                            </li>
+                        </ul>
                     </div>
                     <div class="col-12 col-lg-3">
                         <div class="related-articles ">
                             <div class="fs-2-5 fw-600 ls-2">
-                                Related Articles
+                                Bənzər Xəbərlər
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">News 1</div>
+                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 1</div>
                                 <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                                    <p class="fs-2 hover-cc secondary">Find out more</p>
+                                <a href="news.html"
+                                    class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                                    <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                                     <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                                 </a>
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">News 2</div>
+                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 2</div>
                                 <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                                    <p class="fs-2 hover-cc secondary">Find out more</p>
+                                <a href="news.html"
+                                    class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                                    <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                                     <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                                 </a>
                             </div>
                             <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2"> News 3</div>
+                                <div class="darkgray fs-1-9 ls-2 my-2"> Xəbərlər 3</div>
                                 <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                                    <p class="fs-2 hover-cc secondary">Find out more</p>
+                                <a href="news.html"
+                                    class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                                    <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                                     <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                                 </a>
                             </div>
