--- a/index.html
+++ b/index.html
@@ -437,30 +437,39 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="text-wrapper">
-                    <p class="fs-2-5 fw-600">Lorem Ipsum Dolar</p>
-                    <p class="info">Take an action today!</p>
+                    <a href="blog-1.html" style="color: #fff;">
+                      <p class="fs-2-5 fw-600">Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər hansılardır?</p>
+                      <p class="info">Əmək haqqının hesablanması ölçüsündən...</p>
+                      <i class="fas fa-arrow-right"></i>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="text-wrapper">
+                    <a href="blog-2.html" style="color: #fff;"></a>
+                    <p class="fs-3 fw-600">Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin Böyüməsini Necə kömək
+                      edə bilər?</p>
+                    <p class="info">Hər bir biznes firması biznesin...</p>
                     <i class="fas fa-arrow-right"></i>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="text-wrapper">
-                    <p class="fs-3 fw-600">Lorem Ipsum Dolar</p>
-                    <p class="info">Take an action today!</p>
-                    <i class="fas fa-arrow-right"></i>
+                    <a href="blog-3.html" style="color: #fff;">
+                      <p class="fs-3 fw-600">Auditdə analitikanın əhəmiyyəti nədir?</p>
+                      <p class="info">Audit hər bir firmanın maliyyə...</p>
+                      <i class="fas fa-arrow-right"></i>
+                    </a>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="text-wrapper">
-                    <p class="fs-3 fw-600">Lorem Ipsum Dolar</p>
-                    <p class="info">Take an action today!</p>
-                    <i class="fas fa-arrow-right"></i>
-                  </div>
-                </div>
-                <div class="swiper-slide">
-                  <div class="text-wrapper">
-                    <p class="fs-3 fw-600">Lorem Ipsum Dolar</p>
-                    <p class="info">Take an action today!</p>
-                    <i class="fas fa-arrow-right"></i>
+                    <a href="blog-4.html" style="color: #fff;">
+                      <p class="fs-3 fw-600">Biznesin planlaşdırılmasında və qərarların qəbul edilməsində mühasibat
+                        uçotunun rolu nədir?</p>
+                      <p class="info">Mühasibat xidmətləri istənilən biznesin </p>
+                      <i class="fas fa-arrow-right"></i>
+                    </a>
                   </div>
                 </div>
               </div>
