--- a/privacy.html
+++ b/privacy.html
@@ -469,68 +469,20 @@
                     <div class="col-lg-12">
                         <div class="service-card-container d-flex flex-wrap">
                             <p class="fw-600 fs-2-4 main-title my-5">
-                                We make business personal.
+                                Ümumi müddəalar
                             </p>
                             <p class="text fs-2 my-1">
-                                Demographic, organisational and resourcing issues are radically changing the global
-                                healthcare industry. And we’re only just beginning to understand the impact of recent
-                                technological advances – in life science research, medical equipment, and the internet.
+                                FA Audit Consulting hər bir müştərisinin həmçinin vebsayt vasitəsilə məlumatlarını
+                                təqdim edən istifadəçilərin alınan şəxsi məlumatların məxfiliyinin qorunub saxlanması
+                                siyasətinə riayət edir.
                             </p>
                             <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
+                                FA Audit Consulting Azərbaycan Respublikasının qanunvericiliyinə uyğun vebsayt vasitəsi
+                                ilə şəxsi məlumatlar hesab olunan məlumatları toplamaq niyyətində deyil. Qanunla müəyyən
+                                edilmiş səlahiyyət və vəzifələrimiz çərçivəsində audit işini həyata keçirərkən, şəxsi
+                                məlumatlarınız informasiya təhlükəsizliyi siyasətimizə uyğun olaraq təhlükəsiz şəkildə
+                                istifadə olunacaq.
                             </p>
-                            <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
-                            </p>
-                            <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
-                            </p>
-                            <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
-                            </p>
-                            <ul class="ms-4 my-3">
-                                <p class="fw-600 ls-2 fs-2-5 my-5"> Transform Value</p>
-                                <p class="text fs-2 my-5">We also know that every organisation is different. Our
-                                    healthcare specialists apply
-                                    their sector understanding to provide advice and tailored solutions to achieve your
-                                    organisation’s goals, including:</p>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Define strategic goals and formulate solutions that keep you ahead of disruptive
-                                    change
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Help you sustain and finance growth, manage risk and talent, optimise operations and
-                                    protect value
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Improve financial processes and systems, reduce costs and transform your finance
-                                    function
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Remove the burden of back office operations and compliance challenges, enabling you
-                                    to focus on growth
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Deliver systematic improvements across people, processes and technology, right
-                                    through the supply
-                                    chain
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Engage, specify and deliver scalable technology solutions
-                                </li>
-                            </ul>
 
                         </div>
 
