--- a/blog-1.html
+++ b/blog-1.html
@@ -557,7 +557,7 @@
                             </div>
 
                             <p class="fw-600 fs-3 main-title my-5">
-                                Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər hansılardır?
+                                Əmək haqqı və onun ödənilməsində yaranan çətinliklər
                             </p>
                             <p class="text fs-2 my-5">
                                 Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin yerinə
