--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-1.html" style="color: #fff;">
-                      <p class="fs-2-5 fw-600">Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər hansılardır?</p>
+                      <p class="fs-2-5 fw-600">Əmək haqqı və onun ödənilməsində yaranan çətinliklər</p>
                       <p class="info">Əmək haqqının hesablanması ölçüsündən...</p>
                       <i class="fas fa-arrow-right"></i>
                     </a>
